Add link to Coach page in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <h1>Club App</h1>
     <button id="btn-hello">Tester /api/hello</button>
     <button id="btn-members">Charger /api/members</button>
+    <p><a href="/public/coach.html">➡️ Aller à la page Coach</a></p>
+
   </header>
   <main><pre id="out"></pre></main>
   <script src="/public/script.js"></script>
