Fix link to Coach page in coach.html

--- a/public/coach.html
+++ b/public/coach.html
@@ -11,7 +11,7 @@
     <h1>Coach — Gestion des présences & cotisations</h1>
     <nav>
       <a href="/">Accueil</a>
-      <a href="/public/coach.html" aria-current="page">Page Coach</a>
+      <a href="/coach.html" aria-current="page">Page Coach</a>
     </nav>
   </header>
 
