Fix stylesheet link in coach.html

--- a/public/coach.html
+++ b/public/coach.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Club App — Coach</title>
-  <link rel="stylesheet" href="/public/coach.css" />
+  <link rel="stylesheet" href="/coach.css" />
 </head>
 <body>
   <header class="topbar">
